trying to implement redactor but getting weird list errors, implementing froala WYSIWYG editor through the rails plugin but getting CSS errors, implement froala manually and get toolbar working with font hacks, seems to be persisting data properly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,7 +7,8 @@
  *= require font-awesome
  *= require jquery.dynatable
  *= require timeline
-*/
+ *= require_tree ./froala
+/* Branding colors */
 
 $px-3: .1875rem;
 
