refactoring grade controller logic into grade factory

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,3 +76,6 @@ $media-xlarge-max:  120rem; //
 @import 'typography';
 @import 'unlocks';
 @import 'videos';
+@import 'badges';
+@import 'predictor';
+@import 'grades';
