--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,7 @@ $media-xlarge-max:  120rem; //
 @import 'accessibility';
 @import 'alerts';
 @import 'analytics';
-@import 'datepicker';
+@import 'animation';
 @import 'mixins';
 @import 'background';
 @import 'badges';
