implement angular tooltips for grade fields on grade edit

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
  *= require font-awesome
  *= require jquery.dynatable
  *= require timeline
+ *= require angular-tooltips.min
  *= require_tree ./froala
 /* Branding colors */
 
