implement dynamic 'time ago' tracking for updated grades through angular

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -15,6 +15,10 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
 label.disabled
   color: #888 !important
 
+.updated-at
+  margin-top: 12px
+  font-style: italic
+
 .gradebox
   border: 1px solid #9FD7E3
   padding: 16px 36px
