--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -62,3 +62,156 @@ label.disabled
     float: left
     transition: all 0.5s linear
     opacity: 0
+
+.grade-badge
+  &.hexagon
+    position: relative
+    width: 150px
+    height: 86.60px
+    float: left
+    z-index: 1200
+    background-color: #64C7CC
+    margin: 55.30px 40px 
+    box-shadow: 0 0 20px rgba(12, 100, 104, 0.55)
+    border-left: solid 1px #43b6bb
+    border-right: solid 1px #43b6bb
+    &:before, &:after
+      content: ""
+      position: absolute
+      z-index: 1
+      width: 106.07px
+      height: 106.07px
+      -webkit-transform: scaleY(0.5774) rotate(-45deg)
+      -ms-transform: scaleY(0.5774) rotate(-45deg)
+      transform: scaleY(0.5774) rotate(-45deg)
+      background-color: inherit
+      left: 20.9670px
+      box-shadow: 0 0 20px rgba(12, 100, 104, 0.55)
+    &:before
+      top: -53.0330px
+      border-top: solid 1.4142px #43b6bb
+      border-right: solid 1.4142px #43b6bb
+    &:after
+      bottom: -53.0330px
+      border-bottom: solid 1.4142px #43b6bb
+      border-left: solid 1.4142px #43b6bb
+    span
+      display: block
+      position: absolute
+      top: 0.5773502691896257px
+      left: 0
+      width: 148px
+      height: 85.4478px
+      z-index: 2
+      background: inherit
+
+  .italic
+    font-style: italic
+
+  .ribbon
+    width: 170px
+    position: relative 
+    margin-top: 70px
+    text-align: center
+    font-size: 16px !important
+    z-index: 2400
+    background: #d64b4b
+    margin-left: -10px
+    background: -webkit-gradient(linear, left top, left bottom, from(#d64b4b), to(#ab2c2c))
+    background: -webkit-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -moz-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -ms-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -o-linear-gradient(top, #d64b4b, #ab2c2c)
+    background-image: -ms-linear-gradient(top, #d64b4b 0%, #ab2c2c 100%)
+    -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    font-family: 'Helvetica Neue',Helvetica, sans-serif
+    h1
+      font-size: 16px !important
+      margin-top: 50px
+      color: #590000
+      text-shadow: #d65c5c 0 1px 0
+      margin: 0px
+      padding: 8px 10px
+
+  .ribbon-ends
+    position: relative
+    z-index: 20
+    bottom: 7
+    &:before, &:after
+      content: ''
+      position: absolute
+      display: block
+      bottom: -1em
+      border: 1.5em solid #c23a3a
+      z-index: 1
+    &:before
+      left: -2.5em
+      border-right-width: 1.5em
+      border-left-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+    &:after
+      right: -2.5em
+      border-left-width: 1.5em
+      border-right-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+
+  .ribbon-stitches-top
+    z-index: 2410
+    margin-top: 2px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5)
+
+  .ribbon-stitches-bottom
+    z-index: 2410
+    margin-bottom: 2px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3)
+
+  img.earned
+    max-height: 6rem
+    margin: 0 auto
+    z-index: 2200
+    position: absolute
+    margin: -2px 0 0 27px
+
+  .badge-name
+    font-weight: bold
+    margin-top: 20px
+    position: absolute
+    font-size: 1rem
+    text-align: center
+    vertical-align: top
+    margin-top: 20px
+    bottom: -30px
+    z-index: 2200
+    width: 100%
+
+  .earned-count
+    position: absolute
+    top: 0
+    right: 0
+    font-weight: bold
+    color: white
+    text-align: center
+    width: 100%
+    font-size: 0.9rem
+    margin-top: -15px
+    z-index: 2200
+
+    width: 22px
+    height: 22px
+    -moz-border-radius: 50%
+    -webkit-border-radius: 50%
+    border-radius: 50%
+    background: red
+
