--- a/app/assets/stylesheets/_mixins.css.scss
+++ b/app/assets/stylesheets/_mixins.css.scss
@@ -16,6 +16,17 @@
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#{$fromColor}', EndColorStr='#{$toColor}');
 }
 
+@mixin four-color-horizontal-gradient($color1, $color2, $color3, $color4) {
+  background-color: $color1; //* Fallback Color */
+  background-image: -webkit-gradient(linear, left, right, from($color1), to($color4)); /* Saf4+, Chrome */
+  background-image: -webkit-linear-gradient(to right, $color1, $color2, $color3, $color4); // Chrome 10+, Saf5.1+, iOS 5+ */
+  background-image:    -moz-linear-gradient(to right, $color1, $color2, $color3, $color4); /* FF3.6 */
+  background-image:     -ms-linear-gradient(to right, $color1, $color2, $color3, $color4); /* IE10 */
+  background-image:      -o-linear-gradient(to right, $color1, $color2, $color3, $color4); /* Opera 11.10+ */
+  background-image:         linear-gradient(to right, $color1, $color2, $color3, $color4);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#{$color1}', EndColorStr='#{$color4}');
+}
+
 @mixin rounded-corners($radius) {
   -webkit-border-radius: $radius; /* Safari 3-4, iOS 1-3.2, Android 1.6- */
   -moz-border-radius: $radius; /* Firefox 1-3.6 */
