add css ribbon mix, style grade badges to display earned badge count on a small ribbon under the gold star

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,6 +63,8 @@ $media-xlarge-max:  120rem; //
 @import 'collapse';
 @import 'context_menu';
 @import 'forms';
+@import 'predictor';
+@import 'ribbon_mixins';
 @import 'grades';
 @import 'grid';
 @import 'homepage';
