--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -242,26 +242,37 @@ label.disabled
     top: 0
     right: 4px
     font-weight: bold
-    color: white
+    color: black
     text-align: center
     width: 100%
     font-size: 0.9rem
     margin-top: -12px
     z-index: 2200
 
-    -webkit-transform: scaleY(0.5774) rotate(-45deg)
-    -ms-transform: scaleY(0.5774) rotate(-45deg)
-    transform: scaleY(0.5774) rotate(-45deg)
-
-    width: 26px
-    height: 26px
-    background: #114B87
+    width: 35px
+    height: 35px
 
     &.unearned
       background: #999
       display: none
 
     .earned-count
-      -webkit-transform:  rotate(45deg)
-      -ms-transform: rotate(45deg)
-      transform: rotate(45deg)
+
+  .gold-stars
+    position: absolute
+    top: 0
+    right: -18px
+
+    img.star
+      position: relative
+      z-index: 2700
+
+  .badges-earned
+    @include ribbon
+
+  .earned-total
+    display: inline
+    position: absolute
+    margin-top: -4px
+    font-size: 1rem
+    font-weight: bold
