clean up the hide-after-fade DSL a bit, more family-friendly

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -163,18 +163,12 @@ label.disabled
     &.available.earned
       @include opacity(0)
 
-      &.post_faded
-
-      &.hidethatshit
-        display: none !important
-
     &.awarded.unearned
       @include opacity(0)
 
-      &.post_faded
-
-        &.hidethatshit
-          display: none !important
+    &.available, &.awarded
+      &.hide-after-fade
+        display: none !important
 
     span
       display: block
