tweak some grade badge fade-in/out animation behaviors

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -152,13 +152,13 @@ label.disabled
 
     &.available.unearned-add-active
       transition:1s linear all
-      box-shadow: 0 0 20px #F6C621
+      box-shadow: 0 0 120px #F6C621
       opacity:0.92
 
     &.awarded.earned-add-active
-      transition:1s linear all
-      box-shadow: 0 0 20px #F6C621
-      opacity:0.64
+      transition:1.5s linear all
+      box-shadow: 0 0 150px #FFD017
+      opacity:1
 
     &.fade-in-available
       @include opacity(0.8)
