fix issue where standard form was saving the incorrect raw score value on submit. final testing of grade badge ui behavior. add ability to remove all earned badges for a student at once. begin adding feature to add all badges at once.

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -76,6 +76,27 @@ label.disabled
     transition: all 0.5s linear
     opacity: 0
 
+h4#awarded-header
+  padding-top: 2px
+
+button#remove-badges, button#add-badges
+  padding: 4px 8px !important
+  font-weight: bold !important
+  margin-left: 12px
+  position: absolute
+  margin-top: 1.3rem
+  top: 0
+  font-size: .8rem
+  @include rounded-corners(4px)
+  @include opacity(0.7)
+  @include transition-property("background, opacity")
+  @include transition-duration(0.3s)
+  @include transition-timing-function(ease)
+
+  &:hover
+    @include opacity(1)
+    background: #d64b4b - #111
+
 .grade-badge
   &.hexagon
     @include transition-property("background, opacity")
