iron out some final add/remove bugs where add/remove all was flummoxxing some later actions. refactor badges to better mirror data realities.

--- a/app/views/grades/_badges_awarded.html.haml
+++ b/app/views/grades/_badges_awarded.html.haml
@@ -4,7 +4,7 @@
 
 - if @badges.present?
 
-  .grade-badge.hexagon.awarded(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.earnedBadgesForGrade.length <= 0, earned: badge.earnedBadgesForGrade.length > 0}" ng-click="badge.deleteEarnedStudentBadge()" hide-after-fade)
+  .grade-badge.hexagon.awarded(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.unearned(), earned: badge.earned()}" ng-click="badge.deleteEarnedStudentBadge()" hide-after-fade)
 
     %img(src="{{badge.icon}}" alt="You've earned the {{badge.name}} badge" class="earned")
 
@@ -16,4 +16,4 @@
     .ribbon-ends
     .gold-stars
       %img.star(src="/assets/golden-star.png")
-      .badges-earned.blue {{badge.earnedBadgesForGrade.length + badge.otherEarnedBadges.length}}
+      .badges-earned.blue {{badge.totalEarnedBadges()}}
