--- a/app/views/grades/_badges_available.html.haml
+++ b/app/views/grades/_badges_available.html.haml
@@ -3,7 +3,7 @@
     #{term_for :badges} Available
     %button#add-badges(ng-click="addRemainingEarnedBadges($event)" ng-show="badgesAvailable()") Add All
 
-  .grade-badge.hexagon.available(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.earnedBadgesForGrade.length <= 0, earned: badge.earnedBadgesForGrade.length > 0}" ng-click="earnBadgeForStudent(badge)" hide-after-fade)
+  .grade-badge.hexagon.available(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.unearned(), earned: badge.earned()}" ng-click="earnBadgeForStudent(badge)" hide-after-fade)
 
     %img(src="{{badge.icon}}" alt="You've earned the {{badge.name}} badge" class="earned")
 
