--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -11,7 +11,32 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   color: #555
   cursor: pointer
   cursor: hand
+
+.badge-debug
+  display: block
+  padding: 8px 16px
+  margin: 8px
+  border: 1px solid #888
+  float: left
+
+  &.deleting
+    background: red !important
+    color: white !important
   
+  &.creating
+    background: green !important
+    color: white !important
+
+  &.creating.deleting
+    background: black !important
+
+  .info
+    display: block
+
+    &.earned-badge .pretty-json
+      white-space: pre
+
+
 label.disabled
   color: #888 !important
 
