more testing with the debugging ui, better visiblility for badge debugging headings

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -22,10 +22,16 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   &.deleting
     background: red !important
     color: white !important
+
+    h4
+      color: white !important
   
   &.creating
     background: green !important
     color: white !important
+
+    h4
+      color: white !important
 
   &.creating.deleting
     background: black !important
