delivers angularized grade ui. fix final angular grade bugs

--- a/app/views/grades/_score_level_grading_fields.html.haml
+++ b/app/views/grades/_score_level_grading_fields.html.haml
@@ -24,4 +24,4 @@
     "smart-number" => "",
     "smart-number-options" => "{ maxDigits: 9, preventInvalidInput: true }"
 
-
+%input(type="hidden" name="grade[is_custom_value]" ng-value="grade.is_custom_value")
