--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -72,6 +72,11 @@ label.disabled
 #badges-available
   margin-top: 20px
 
+#available
+  min-height: 300px
+
+  &.empty
+
 #awarded
   @include linear-gradient(#C4EAFB,#E9F8FF)
   min-height: 300px
