fixes some grade and user controller specs.

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -392,7 +392,7 @@ article.predictor-article
 // ANIMATIONS
 
 .collapsable .predictor-article
-  @include transition(all, .5s, ease-out)
+  @include transition(all, .5s)
 
 .collapsable.collapsed .predictor-article
   overflow: hidden
