setting up spring to run tests faster. installing / testing parallel_tests to delegate spec processes to multiple cores.

--- a/app/views/grades/_raw_score_grading_fields.html.haml
+++ b/app/views/grades/_raw_score_grading_fields.html.haml
@@ -1,5 +1,5 @@
 .small-12.medium-4.columns
-  = f.label :raw_score, "Raw Score (#{@assignment.point_total} points Possible)"
+  = f.label :raw_score, "Raw Score (#{@assignment.point_total} Points Possible)"
   = f.text_field :raw_score,
     default: @assignment.point_total,
     label: "Score",
