--- a/app/assets/javascripts/angular/templates/ng_gradeScheme.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_gradeScheme.html.haml
@@ -4,7 +4,7 @@
   %span.form_label Level name
   %input{'name' => 'level', 'ng-model' => 'element.level'}
   %span.form_label Low Point Threshold
-  %input{'name' => 'low_range', 'ng-model' => 'element.low_range', 'ng-blur' => 'gradeService.update_scheme($index)'}
+  %input{:type => 'number','index' => '{{$index}}','name' => 'low_range', 'ng-model' => 'element.low_range', 'ng-blur' => 'gradeService.update_scheme($index)', 'grade-scheme-low-range' => ''}
   %span.form_label High Point Threshold
   %input{'name' => 'high_range', 'ng-model' => 'element.high_range', 'disabled' => 'true', :class => "disabled"}
   %button{:type => 'button', :class => 'remove-element button alert radius', 'ng-click' => 'gradeService.remove($index)'} Remove
