--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -24,9 +24,9 @@ fieldset
   border: none
   padding: 0
 
-select, .ui-widget select
-  background-color: #FFF 
-  padding: .75rem .5 !important
+select
+  background-color: #FFF
+  padding: .5rem !important
   width: 15rem
   height: 1.75rem
   font-family: Avenir, sans-serif
@@ -70,6 +70,10 @@ ul.accepts_submission_types
 
 .form_buttons
   margin-top: 1rem
+
+.low-range.ng-invalid
+  background: red
+  border: 1px solid red
 
 .add-element
   display: none
@@ -150,7 +154,7 @@ ul.accepts_submission_types
 .team-filter
   float: right
 
-.simple_form section 
+.simple_form section
   margin-bottom: 1rem
   padding-bottom: 1rem
   border: 0
@@ -174,7 +178,7 @@ ul.accepts_submission_types
 
   .form_label
     margin-left: 10.75rem
-    padding: .25rem 0 
+    padding: .25rem 0
     font-size: 80%
     line-height: 130%
     color: $color-grey-1
@@ -211,5 +215,5 @@ ul.accepts_submission_types
     padding: .5rem
     width: 5rem
 
-  .disabled 
+  .disabled
     font-size: 1.0rem
