Working standard edit form

--- a/app/views/grades/_raw_score_grading_fields.html.haml
+++ b/app/views/grades/_raw_score_grading_fields.html.haml
@@ -1,4 +1,4 @@
-.small-12.medium-4.columns
+.raw-score
   = f.label :raw_score, "Raw Score (#{@assignment.point_total} Points Possible)"
   = f.text_field :raw_score,
     default: @assignment.point_total,
