Display the feedback form on an individual score

--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -38,3 +38,8 @@
   - if @assignment.rubric and @assignment.rubric.designed?
     .rubric-container{:style => "overflow-x:auto"}
       = render 'grades/rubric_grade_results'
+
+  - unless grade.feedback_read?
+    = simple_form_for @assignment, url: feedback_read_grades_assignment_path(@assignment), method: :post do |f|
+      = hidden_field_tag :grade_id, grade.id
+      = f.submit "I have read this feedback", class: "button tiny radius"
