--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -36,13 +36,15 @@
       %p
         %span.bold= "#{points grade.raw_score }"
         %span=" / #{points @assignment.point_total } possible points"
-      - if current_student.grade_for_assignment(@assignment).assignment.release_necessary? && current_user_is_staff?
+      - if grade.assignment.release_necessary? && current_user_is_staff?
         %p
           Status:
-          %span.bold= current_student.grade_for_assignment(@assignment).status
-      - if current_student.grade_for_assignment(@assignment).feedback.present?
+          %span.bold= grade.status
+      - if grade.feedback.present?
         %p.bold Instructor Feedback:
-        %p= raw current_student.grade_for_assignment(@assignment).feedback
+        %p= raw grade.feedback
+
+      = render partial: "grades/request_feedback", locals: { grade: grade, assignment: @assignment }
 
   - else
     - @group.students.each do |student|
